--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ html, body, #root {
 
 body {
   position: relative;
-  background-image: url("D:\Project\Instagram-mern-main (1)\GamerConnect\frontend\src\assets\download.jpg");
+  background-image: '../src/assets/download.jpeg';
  
   background-size: cover;
 }
